b 시스템 > 툴팁수정(전체페이지) 상담관리 > 요청사항관리, CMS동의서관리, Q&A관리

--- a/guide/elements/form.html
+++ b/guide/elements/form.html
@@ -227,7 +227,7 @@
             <span class="k-button k-primary"
                   title="툴팁 메세지 입니다."
                   data-role="tooltip"
-                  data-auto-hide="false"
+                  data-auto-hide="true"
                   data-position="bottom"
             >Hover me!</span>
         </div>
@@ -236,7 +236,7 @@
 &lt;span class="k-button k-primary"
     title="툴팁 메세지 입니다."
     data-role="tooltip"
-    data-auto-hide="false"
+    data-auto-hide="true"
     data-position="bottom"
 >Hover me!&lt;/span>
             </code></pre>
