--- a/guide/list_other.html
+++ b/guide/list_other.html
@@ -787,7 +787,7 @@
                     <td class="ex_end">09-09</td>
                     <td class="date_start">09-01</td>
                     <td class="date_end">09-01</td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(450-xsm)</td>
                 </tr>
                 <tr class="del">
@@ -826,7 +826,7 @@
                     <td class="ex_end">09-09</td>
                     <td class="date_start">09-01</td>
                     <td class="date_end">09-01</td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(800-md2)</td>
                 </tr>
                 <tr class="del">
@@ -852,7 +852,7 @@
                     <td class="ex_end">09-10</td>
                     <td class="date_start">09-01</td>
                     <td class="date_end">09-01</td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="del">
@@ -904,7 +904,7 @@
                     <td class="ex_end">09-13</td>
                     <td class="date_start">09-01</td>
                     <td class="date_end">09-01</td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="">
@@ -917,7 +917,7 @@
                     <td class="ex_end">09-13</td>
                     <td class="date_start">09-01</td>
                     <td class="date_end">09-01</td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="">
@@ -929,7 +929,7 @@
                     <td class="ex_start">09-13</td>
                     <td class="ex_end">09-13</td>
                     <td class="date_start">09-02</td>
-                    <td class="date_end"></td>
+                    <td class="date_end">09-02</td>
                     <td class="state" data-state=""></td>
                     <td>popup(700-xmd)</td>
                 </tr>
