--- a/guide/elements/tabletitle.html
+++ b/guide/elements/tabletitle.html
@@ -10,7 +10,7 @@
                     <span class="h-ico lg tip ml-8"
                         title="툴팁 메세지 입니다."
                         data-role="tooltip"
-                        data-auto-hide="false"
+                        data-auto-hide="true"
                         data-position="left bottom"
                     >팁</span>
                     <button type="button" class="h-ico sm bookmark ml-4 funcToggle">북마크</button>
@@ -34,7 +34,7 @@
     &lt;span class="h-ico lg tip ml-8"
         title="툴팁 메세지 입니다."
         data-role="tooltip"
-        data-auto-hide="false"
+        data-auto-hide="true"
         data-position="left bottom"
     >팁&lt;/span>
     &lt;button type="button" class="h-ico sm bookmark ml-4 funcToggle">북마크&lt;/button>
