bc> 상담관리, b> 배분, 회계

--- a/guide/list_other.html
+++ b/guide/list_other.html
@@ -930,7 +930,7 @@
                     <td class="ex_end">09-13</td>
                     <td class="date_start">09-02</td>
                     <td class="date_end">09-02</td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="del">
