--- a/pages/SA/SA070502.html
+++ b/pages/SA/SA070502.html
@@ -29,7 +29,9 @@
             <div class="content-group">
 
 
-                <div data-role="tabstrip" class="tab-control border">
+                <div data-role="tabstrip" 
+                    data-animation="false"
+                    class="tab-control border">
                     <ul>
                         <li>발송</li>
                         <li class="k-state-active">메세지 설정</li>
@@ -204,9 +206,7 @@
 고객님의 납부에 불편을 덜어드리기 위해 모바일 청구결제가 가능한 알림뱅킹 서비스를 도입하게 되었습니다.
 카카오톡으로 전송되는 청구서를 통해 내역을 확인하시고 모바일로 간편하게 납부하실 수 있습니다.
 고객님의 많은 이용부탁드립니다.
-감사합니다.
-    
-                                        </textarea>
+감사합니다.</textarea>
                                     </div>
                                     
                                     <div class="btn-box bottom">
