--- a/pages/SA/SA070503.html
+++ b/pages/SA/SA070503.html
@@ -29,7 +29,9 @@
             <div class="content-group">
 
 
-                <div data-role="tabstrip" class="tab-control border">
+                <div data-role="tabstrip" 
+                    data-animation="false"
+                    class="tab-control border">
                     <ul>
                         <li>발송</li>
                         <li>메세지 설정</li>
