--- a/pages/SA/SA070901.html
+++ b/pages/SA/SA070901.html
@@ -57,6 +57,8 @@
                                         data-footer="false"
                                         class="datepicker sm" /> 
                                 </div>
+                            </div>
+                            <div class="form-group">
                                 <span class="label">동의상태</span>
                                 <div class="form-set">
                                     <select data-role="dropdownlist" data-value="대기" data-option-label="대기" class="sm">
