--- a/guide/list.html
+++ b/guide/list.html
@@ -870,7 +870,7 @@
                     <td class="state" data-state="ing"></td>
                     <td>popup(lg)</td>
                 </tr>
-                <tr class="">
+                <tr class="do">
                     <td class="d1">04과금</td>
                     <td class="d2">01과금관리</td>
                     <td class="d3">01조회</td>
@@ -881,7 +881,7 @@
                     <td class="date_start">08-27</td>
                     <td class="date_end">08-27</td>
                     <td class="state" data-state="done"></td>
-                    <td></td>
+                    <td>디자인 수정됨(반영필요)</td>
                 </tr>
                 <tr class="">
                     <td class="d1">04과금</td>
@@ -1011,7 +1011,7 @@
                     <td class="date_start">08-30</td>
                     <td class="date_end">08-30</td>
                     <td class="state" data-state="done"></td>
-                    <td></td>
+                    <td>디자인 변경됨</td>
                 </tr>
                 <tr class="">
                     <td class="d1">05배분</td>
@@ -1076,7 +1076,7 @@
                     <td class="date_start">08-31</td>
                     <td class="date_end">08-31</td>
                     <td class="state" data-state="done"></td>
-                    <td>디자인 수정반영 필요</td>
+                    <td>디자인 수정됨(반영필요)</td>
                 </tr>
                 <tr class="do">
                     <td class="d1">05배분</td>
@@ -1104,43 +1104,82 @@
                     <td class="state" data-state=""></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
+                    <td class="d1">05배분</td>
+                    <td class="d2">06간편결제수수료</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA050601</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start">09-02</td>
+                    <td class="ex_end">09-02</td>
+                    <td class="date_start">09-02</td>
+                    <td class="date_end">09-02</td>
+                    <td class="state" data-state="done"></td>
+                    <td></td>
+                </tr>
+                <tr class="">
                     <td class="d1">05배분</td>
                     <td class="d2">07휴대전화수수료</td>
                     <td class="d3">01조회</td>
                     <td class="sbid"><span class="pc">SA050701</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="ex_start">09-02</td>
+                    <td class="ex_end">09-02</td>
+                    <td class="date_start">09-02</td>
+                    <td class="date_end">09-02</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">06회계</td>
                     <td class="d2">01FMS입금통장관리</td>
                     <td class="d3">01조회</td>
                     <td class="sbid"><span class="pc">SA060101</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="ex_start">09-02</td>
+                    <td class="ex_end">09-02</td>
+                    <td class="date_start">09-02</td>
+                    <td class="date_end">09-02</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="do">
                     <td class="d1">06회계</td>
-                    <td class="d2">02수기입출관리</td>
-                    <td class="d3">01조회</td>
-                    <td class="sbid"><span class="pc">SA060201</span><span class="mo"></span></td>
+                    <td class="d2">01FMS입금통장관리</td>
+                    <td class="d3">01수기입출등록</td>
+                    <td class="sbid"><span class="pc">SA060101_01</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start"></td>
                     <td class="ex_end"></td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
+                    <td>popup(md)</td>
+                </tr>
+                <tr class="">
+                    <td class="d1">06회계</td>
+                    <td class="d2">01FMS입금통장관리</td>
+                    <td class="d3">02업체명아이디검색</td>
+                    <td class="sbid"><span class="pc">SA060102</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start">09-02</td>
+                    <td class="ex_end">09-02</td>
+                    <td class="date_start">09-02</td>
+                    <td class="date_end">09-02</td>
+                    <td class="state" data-state="done"></td>
+                    <td>popup(sm)</td>
+                </tr>
+                <tr class="">
+                    <td class="d1">06회계</td>
+                    <td class="d2">02수기입출관리</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA060201</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start">09-02</td>
+                    <td class="ex_end">09-02</td>
+                    <td class="date_start">09-02</td>
+                    <td class="date_end">09-02</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="do">
@@ -1156,33 +1195,46 @@
                     <td class="state" data-state=""></td>
                     <td>popup(md)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">06회계</td>
-                    <td class="d2">03월마감전표</td>
-                    <td class="d3">01조회</td>
+                    <td class="d2">03전표관리</td>
+                    <td class="d3">01일전표</td>
                     <td class="sbid"><span class="pc">SA060301</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
-                    <td></td>
+                    <td class="ex_start">09-02</td>
+                    <td class="ex_end">09-02</td>
+                    <td class="date_start">09-02</td>
+                    <td class="date_end">09-02</td>
+                    <td class="state" data-state="done"></td>
+                    <td>search control 2줄, 탭 전체수정예정</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
+                    <td class="d1">06회계</td>
+                    <td class="d2">03전표관리</td>
+                    <td class="d3">01월전표</td>
+                    <td class="sbid"><span class="pc">SA060302</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start">09-02</td>
+                    <td class="ex_end">09-02</td>
+                    <td class="date_start">09-02</td>
+                    <td class="date_end">09-02</td>
+                    <td class="state" data-state="done"></td>
+                    <td>탭 전체수정예정</td>
+                </tr>
+                <tr class="">
                     <td class="d1">06회계</td>
                     <td class="d2">04전표관리</td>
                     <td class="d3">01조회</td>
                     <td class="sbid"><span class="pc">SA060401</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="ex_start">09-02</td>
+                    <td class="ex_end">09-02</td>
+                    <td class="date_start">09-02</td>
+                    <td class="date_end">09-02</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="del">
                     <td class="d1">06회계</td>
                     <td class="d2">05ERP계정관리</td>
                     <td class="d3">01조회</td>
@@ -1195,7 +1247,7 @@
                     <td class="state" data-state=""></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="del">
                     <td class="d1">06회계</td>
                     <td class="d2">06간편결제수수료</td>
                     <td class="d3">01조회</td>
@@ -1623,6 +1675,45 @@
                     <td class="date_end">08-26</td>
                     <td class="state" data-state="done"></td>
                     <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">08권한관리</td>
+                    <td class="d2">01사용자관리</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA080101</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">08권한관리</td>
+                    <td class="d2">01사용자관리</td>
+                    <td class="d3">02그룹등록</td>
+                    <td class="sbid"><span class="pc">SA080102</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td>popup-md</td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">08권한관리</td>
+                    <td class="d2">01사용자관리</td>
+                    <td class="d3">03사용자등록</td>
+                    <td class="sbid"><span class="pc">SA080103</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td>popup(md)</td>
                 </tr>
             </tbody>
         </table>
