BC main/ 정산, 배분, 회계

--- a/guide/elements/table.html
+++ b/guide/elements/table.html
@@ -350,7 +350,8 @@
                             string: { contains: 'contains' },
                             enums: { eq: 'eq' }
                         }
-                    }" style="height: 420px">
+                    }" 
+                    style="height: 420px">
                 </div>
                 <div class="table-bottom">
                     <button data-role="button" class="gray-border">삭제</button>
