--- a/pages/SA/SA040101.html
+++ b/pages/SA/SA040101.html
@@ -21,7 +21,7 @@
                 <div class="contents-header">
                     <div class="title-box lg">
                         <div class="left-group">
-                            <h2 class="main-title">입금관리</h2>
+                            <h2 class="main-title">과금관리</h2>
                             <span class="h-ico lg tip ml-8"
                                 title="툴팁 메세지 입니다."
                                 data-role="tooltip"
@@ -46,10 +46,13 @@
                 <!-- Contents Body -->
                 <div class="contents-body">
                     <div class="table-group">
+                        <div class="search-btn pt-0">
+                            <button data-role="button" class="md"><span>과금산정</span></button>
+                        </div>
                         <div class="search-control">
-                            <div class="search-line">
+                            <!-- <div class="search-line">
                                 <button data-role="button"><span>과금신청</span></button>
-                            </div>
+                            </div> -->
                             <div class="search-line mt-6">
                                 <div class="form-group">
                                     <span class="label">검색항목</span>
