--- a/guide/list.html
+++ b/guide/list.html
@@ -125,7 +125,7 @@
                     <td class="date_start">08-09</td>
                     <td class="date_end">08-09</td>
                     <td class="state" data-state="done"></td>
-                    <td>popup(md)</td>
+                    <td>popup(md), 디자인 수정됨</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01기준정보</td>
@@ -138,7 +138,7 @@
                     <td class="date_start">08-09</td>
                     <td class="date_end">08-09</td>
                     <td class="state" data-state="done"></td>
-                    <td>popup(md)</td>
+                    <td>popup(md), 디자인 수정됨</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01기준정보</td>
@@ -805,7 +805,7 @@
                     <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">03정산</td>
                     <td class="d2">07이체관리</td>
                     <td class="d3">02등록</td>
@@ -815,8 +815,8 @@
                     <td class="ex_end"></td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state="ing"></td>
-                    <td>popup(md), 테이블 체크 확인</td>
+                    <td class="state" data-state="done"></td>
+                    <td>popup(md), 체크 이미지</td>
                 </tr>
                 <tr class="">
                     <td class="d1">03정산</td>
@@ -857,7 +857,7 @@
                     <td class="state" data-state="done"></td>
                     <td>popup(lg), 내용빌 경우 컬러</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">03정산</td>
                     <td class="d2">09일마감관리</td>
                     <td class="d3">03일마감등록</td>
@@ -867,10 +867,10 @@
                     <td class="ex_end"></td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state="ing"></td>
-                    <td>popup(lg)</td>
+                    <td class="state" data-state="done"></td>
+                    <td>popup(lg), button in cell</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">04과금</td>
                     <td class="d2">01과금관리</td>
                     <td class="d3">01조회</td>
@@ -881,7 +881,7 @@
                     <td class="date_start">08-27</td>
                     <td class="date_end">08-27</td>
                     <td class="state" data-state="done"></td>
-                    <td>디자인 수정됨(반영필요)</td>
+                    <td>디자인 수정됨</td>
                 </tr>
                 <tr class="">
                     <td class="d1">04과금</td>
@@ -1065,7 +1065,7 @@
                     <td class="state" data-state="done"></td>
                     <td>popup(lg)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05배분</td>
                     <td class="d2">04은행후취수수료관리</td>
                     <td class="d3">01조회</td>
@@ -1076,9 +1076,9 @@
                     <td class="date_start">08-31</td>
                     <td class="date_end">08-31</td>
                     <td class="state" data-state="done"></td>
-                    <td>디자인 수정됨(반영필요)</td>
+                    <td>디자인 수정됨, grid footer</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05배분</td>
                     <td class="d2">05신용카드수수료</td>
                     <td class="d3">01조회</td>
@@ -1088,10 +1088,10 @@
                     <td class="ex_end"></td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05배분</td>
                     <td class="d2">05신용카드수수료</td>
                     <td class="d3">02수수료등록</td>
@@ -1101,7 +1101,7 @@
                     <td class="ex_end"></td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="">
@@ -1143,7 +1143,7 @@
                     <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">06회계</td>
                     <td class="d2">01FMS입금통장관리</td>
                     <td class="d3">01수기입출등록</td>
@@ -1153,7 +1153,7 @@
                     <td class="ex_end"></td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(md)</td>
                 </tr>
                 <tr class="">
@@ -1182,17 +1182,17 @@
                     <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">06회계</td>
                     <td class="d2">02수기입출관리</td>
                     <td class="d3">02수기입출관리등록</td>
-                    <td class="sbid"><span class="pc">SA060202</span><span class="mo"></span></td>
+                    <td class="sbid"><span class="pc">SA060202_01</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start"></td>
                     <td class="ex_end"></td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(md)</td>
                 </tr>
                 <tr class="">
@@ -1244,7 +1244,7 @@
                     <td class="ex_end"></td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="del"></td>
                     <td></td>
                 </tr>
                 <tr class="del">
@@ -1257,7 +1257,7 @@
                     <td class="ex_end"></td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="del"></td>
                     <td></td>
                 </tr>
                 <tr class="">
@@ -1676,7 +1676,7 @@
                     <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">08권한관리</td>
                     <td class="d2">01사용자관리</td>
                     <td class="d3">01조회</td>
@@ -1686,10 +1686,10 @@
                     <td class="ex_end"></td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">08권한관리</td>
                     <td class="d2">01사용자관리</td>
                     <td class="d3">02그룹등록</td>
@@ -1699,10 +1699,10 @@
                     <td class="ex_end"></td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup-md</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">08권한관리</td>
                     <td class="d2">01사용자관리</td>
                     <td class="d3">03사용자등록</td>
@@ -1712,7 +1712,7 @@
                     <td class="ex_end"></td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(md)</td>
                 </tr>
             </tbody>
