--- a/guide/list_other.html
+++ b/guide/list_other.html
@@ -101,30 +101,30 @@
                     <td class="state" data-state="done"></td>
                     <td>window</td>
                 </tr>
-                <tr class="do">
+                <!-- <tr class="do">
                     <td class="d1">공통(BC)</td>
                     <td class="d2"></td>
                     <td class="d3">알럿</td>
                     <td class="sbid"><span class="pc">BCalert</span><span class="mo"></span></td>
-                    <!-- <td class="coder">주진희</td> -->
+                   
                     <td class="ex_start">08-30</td>
                     <td class="ex_end">08-30</td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>alert(300)</td>
-                </tr>
-                <tr class="do">
+                </tr> -->
+                <tr class="">
                     <td class="d1">메인</td>
                     <td class="d2"></td>
                     <td class="d3">메인</td>
-                    <td class="sbid"><span class="pc">Main</span><span class="mo"></span></td>
+                    <td class="sbid"><span class="pc">BCmain</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start"></td>
                     <td class="ex_end"></td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="">
@@ -361,7 +361,7 @@
                     <td class="state" data-state="del"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">02업체주요정보</td>
                     <td class="d2">02비번초기화</td>
                     <td class="d3"></td>
@@ -371,10 +371,10 @@
                     <td class="ex_end">09-02</td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(410-sm)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">02업체주요정보</td>
                     <td class="d2">03비번재발급</td>
                     <td class="d3"></td>
@@ -384,7 +384,7 @@
                     <td class="ex_end">09-02</td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(410-sm)</td>
                 </tr>
                 <tr class="del">
@@ -465,7 +465,7 @@
                     <td class="state" data-state="del"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">03업체상세정보</td>
                     <td class="d2">04사용료관리</td>
                     <td class="d3">사용료수정</td>
@@ -475,7 +475,7 @@
                     <td class="ex_end">09-03</td>
                     <td class="date_start">09-01</td>
                     <td class="date_end"></td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(800-md2)</td>
                 </tr>
                 <tr class="del">
@@ -582,7 +582,7 @@
                     <td class="state" data-state="del"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05상담관리</td>
                     <td class="d2">02공지사항</td>
                     <td class="d3">상세</td>
@@ -592,7 +592,7 @@
                     <td class="ex_end">09-06</td>
                     <td class="date_start">09-01</td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="del">
@@ -699,7 +699,7 @@
                     <td class="state" data-state="del"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05상담관리</td>
                     <td class="d2">09요청사항관리</td>
                     <td class="d3">상세</td>
@@ -709,7 +709,7 @@
                     <td class="ex_end">09-08</td>
                     <td class="date_start">09-01</td>
                     <td class="date_end"></td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="">
@@ -944,7 +944,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state="del"></td>
-                    <td></td>
+                    <td>초기화, 답글, 툴팁 아이콘 전달</td>
                 </tr>
                 <tr class="del">
                     <td class="d1">05상담관리</td>
