--- a/pages/SA/SA030903.html
+++ b/pages/SA/SA030903.html
@@ -125,10 +125,10 @@
                                     <td class="text-right">381,838,997</td>
                                     <td class="text-right">48,119,937,883</td>
                                 </tr>
-                                <tr>
-                                    <td class="point">전체 입금 후 수수료 출금</td>
+                                <tr class="total">
+                                    <td>전체 입금 후 수수료 출금</td>
                                     <td class="text-right none"></td>
-                                    <td class="text-right point">48,119,937,883</td>
+                                    <td class="text-right">48,119,937,883</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -136,17 +136,15 @@
                 </div>
                 <!-- 일자금 집계 현황 -->
                 <div class="table-set">
-                    <script type="text/x-kendo-template" id="toolbarTemplate">
-                        <div class="title-box xsm align-items-end">
-                            <div class="left-group">
-                                <h3 class="sub-title">일자금 집계 현황</h3>
-                            </div>
-                            <div class="right-group">
-                                <button data-role="button" class="k-button green"><span>엑셀</span></button>
-                            </div>
+                    <div class="title-box xsm align-items-end">
+                        <div class="left-group">
+                            <h3 class="sub-title">일자금 집계 현황</h3>
                         </div>
-                    </script>
-                    <div class="table-content grid" id="viewModel_grid">
+                        <div class="right-group">
+                            <button data-role="button" class="k-button green"><span>엑셀</span></button>
+                        </div>
+                    </div>
+                    <!-- <div class="table-content grid" id="viewModel_grid">
                         <div data-role="grid" 
                             data-sortable="false" 
                             data-editable="true" 
@@ -160,15 +158,75 @@
                             data-bound="ddbound"
                             data-toolbar="#=toolbarTemplate()#">
                         </div>
+                    </div> -->
+                    <div class="table">
+                        <table>
+                            <colgroup>
+                                <col width="">
+                                <col width="">
+                                <col width="">
+                                <col width="">
+                            </colgroup>
+                            <thead>
+                                <tr>
+                                    <th>구분</th>
+                                    <th>시스템 금액</th>
+                                    <th>실계좌 금액</th>
+                                    <th>일치여부</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>전일잔액</td>
+                                    <td class="text-right">381,838,997</td>
+                                    <td class="text-right">48,119,937,883</td>
+                                    <td>
+                                        <div class="positive flexbox justify-content-between">
+                                            <span>일치</span>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>당일잔액</td>
+                                    <td class="text-right">19,045,890,328</td>
+                                    <td class="text-right">48,119,937,883</td>
+                                    <td>
+                                        <div class="negative flexbox justify-content-between">
+                                            <span>불일치</span>
+                                            <span>-4,000</span>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <td>누적잔액</td>
+                                    <td class="text-right">4,342,618,793</td>
+                                    <td class="text-right">48,119,937,883</td>
+                                    <td>
+                                        <div class="negative flexbox justify-content-between">
+                                            <span>불일치</span>
+                                            <span>-4,000</span>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tfoot>
+                        </table>
                     </div>
-                    <div class="table-content grid" id="viewModel_grid2">
+                     
+                    <div class="table-content grid mt-10" id="viewModel_grid2">
+                        <script type="text/x-kendo-template" id="gridBtn">
+                            <div class="k-button gray-border">
+                                <span>입출금액 초기화</span>
+                            </div>
+                        </script>
                         <div data-role="grid" 
                             data-sortable="false" 
                             data-editable="true" 
                             data-columns='[
                             { "title": "계좌변 상세", columns: [{"field": "계좌명"},{"field": "계좌번호"},{"field": "잔액"},{"field": "전일잔액"}]},
-                            { "title": "버튼", "field": "systemPrice", columns: [{"field": "입금액"}] },
-                            { "title": "버튼", "field": "realPrice", columns: [{"field": "출금액"}] }
+                            { "field": `<button class="k-button gray-border"><span>입출금액 초기화</span></button>`, columns: [{"field": "입금액", "width": 149}] },
+                            { "field": `<button class="k-button blue-border"><span>클립보드 가져오기</span></button>`, columns: [{"field": "출금액", "width": 160}] }
                             ]' 
                             data-bind="source: gridSource">
                         </div>
@@ -262,6 +320,8 @@
                 cell.addClass(setColor(etc));
             }
         }
+
+        
 
         var viewModel_grid2 = kendo.observable({
             gridSource: [
